# dinglebop-io

./: renovate.json
.github/workflows/: release.yml
gitops/addons/k8s.dingle.bop/agentgateway/: Chart.yaml  values.yaml
gitops/addons/k8s.dingle.bop/argocd/: Chart.yaml  values.yaml
gitops/addons/k8s.dingle.bop/cert-manager/: Chart.yaml  values.yaml
gitops/addons/k8s.dingle.bop/kured-system/: Chart.yaml  values.yaml
gitops/addons/k8s.dingle.bop/system-upgrade/: kustomization.yaml
gitops/apps/k8s.dingle.bop/dinglebop/: backend.yaml  frontend.yaml  httproute.yaml  namespace.yaml  redis.yaml
gitops/argo/: addons.yaml  apps.yaml
projects/dinglebop.io/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile  nginx.conf
projects/dinglebop.io/frontend/: Dockerfile  nginx.conf
projects/dinglebop.io/src/: config.rs  error.rs  lib.rs  main.rs  presence.rs  redis_bus.rs  state.rs
projects/dinglebop.io/src/handlers/: click.rs  health.rs  mod.rs  ws.rs
projects/dinglebop.io/src/ws/: protocol.rs  session.rs
projects/dinglebop.io/static/: app.js  index.html  style.css
projects/dinglebop.io/tests/: click_flow.rs  presence_flow.rs
projects/dinglebop.io/tests/common/: mod.rs
